fix graphDiv visibility

--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -92,6 +92,7 @@ h1 {
 }
 
 #graphDiv {
+	display: none;
 	padding: 1px;
 	border-radius: 5px;
 	border: 0.3px solid #800080;
